--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="titulo-principal">Repositorio</h1>
+    <h1 id="titulo-principal">Repositorio v1.0</h1>
     <p class="texto-destacado">Este es un parrafo</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium libero voluptatum repudiandae quidem atque magni perspiciatis! Molestias ullam possimus, adipisci similique itaque praesentium aliquam nesciunt ea obcaecati mollitia dolor impedit!</p>
     <button class="btn">Boton normal</button>
-    <button class="btn-especial"></button>
+    <button class="btn especial"></button>
 </body>
 </html>
