--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="titulo-principal">Repositorio v1.0</h1>
+    <h1 id="titulo-principal">Repositorio NO FUNCIONA NADA</h1>
     <p class="texto-destacado">Este es un parrafo</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium libero voluptatum repudiandae quidem atque magni perspiciatis! Molestias ullam possimus, adipisci similique itaque praesentium aliquam nesciunt ea obcaecati mollitia dolor impedit!</p>
     <button class="btn">Boton normal</button>
